# ppdf

./: .editorconfig  .gitignore  README.md  pyproject.toml
ppdf/: __main__.py  bin.py  capturer.py  logger.py
ppdf/constant/: metadata.py
test/: bin_test.py  capturer_test.py  conftest.py
